fixed h2 overflow bug

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    height: 2em;
+    
     margin: 2em;
 
 
